Finish Lentil, Chard, and Sweet Potato Curry page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
+   
     <h1>Odin Recipes</h1>
-    <a href="./recipes/thaisoup.html">Thai Vegetable Noodle Soup</a>
+   
+    <ul>
+        <li><a href="./recipes/thaisoup.html">Thai Vegetable Noodle Soup</a></li>
+        <li><a href="./recipes/lentilcurry.html">Lentil, Chard, and Sweet Potato Curry</a></li>
+    </ul>
+
 </body>
 
 
