Complete rice page and finish assignment

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
    
     <h1>Odin Recipes</h1>
-   
+
     <ul>
         <li><a href="./recipes/thaisoup.html">Thai Vegetable Noodle Soup</a></li>
         <li><a href="./recipes/lentilcurry.html">Lentil, Chard, and Sweet Potato Curry</a></li>
+        <li><a href="./recipes/nofryfriedrice.html">No Fry Fried Rice</a>
     </ul>
 
+    <img src="https://images.pexels.com/photos/1109197/pexels-photo-1109197.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Hungry man eating a burger">
+    
 </body>
 
 
